database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: database-final
  name: database-final
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database-final
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: database-final
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: env-vars--database
          image: projects.registry.vmware.com/dimension_wcp/testbed-mgmt-postgres:12.7-alpine
          imagePullPolicy: IfNotPresent
          name: database
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: "1000m"
              memory: "2048Mi"
            requests:
              cpu: "1000m"
              memory: "1536Mi"

          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-final-data
      imagePullSecrets:
        - name: harbor-secrets
      restartPolicy: Always
      volumes:
        - name: db-final-data
          persistentVolumeClaim:
            claimName: db-final-data
status: {}
