database-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: database-final
  name: database-final
spec:
  type: LoadBalancer
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
      nodePort: 30001
  selector:
    io.kompose.service: database-final
status:
  loadBalancer: {}
