main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - fractal-tools-admin.ara.decc.vmware.com
        - fractal-tools.ara.decc.vmware.com
  rules:
    - host: fractal-tools-admin.ara.decc.vmware.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginxrp
                port:
                  number: 8000

    - host: fractal-tools.ara.decc.vmware.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
